Добавление в дерево для LLK