@@ -1,39 +1,40 @@
 package com.company;
 
 import java.util.LinkedList;
-import java.util.Vector;
 import static com.company.Constans.*;
 public class llk {
-    private int MAX = 1000;
+    //текущая позиция в файле
     private int tec_iterat;
     private String content;
     private MyScanner sc;
-    private Vector<Integer> stack;
+    private LinkedList<Integer> stack = new LinkedList<>();
+
     //стек указателей на вершины семантического дерева
     private static LinkedList<tree> MyTree = new LinkedList<>();
-    //указатель стека вершин
-    private int ukTree;
     //стек типов
-    private Vector<Integer> typeStack;
-    //флаг описания данных под вопросом
-    private boolean flagData;
+    private LinkedList<Integer> typeStack = new LinkedList<>();
+    //стек переменных
+    private LinkedList<Node> varStack = new LinkedList<>();
     //корень семантического дерева
     private tree root;
     //последний отсканированный тип
     private int currentType;
-    //идентификатор
-    int currentId;
-    //тип константы
-    int currentTypeConst;
     //сама константа
-    int currentConst;
-    boolean wasConst;
-    int typeConst;
+    String currentConst;
+    //тип данных(функция, переменная, экземпляр класса, класс)
+    //необходимо при поиске
+    DATA_TYPE data_type;
+    //для поиска в дереве
+    tree search;
+    //ID почледний считанный
+    String nameID;
+    //ID класса(при объявлении переменной класса)
+    String nameClass;
 
     llk(String newContent){
         sc = new MyScanner();
         content = newContent;
-        stack = new Vector<>();
+
         getNextLex();
         Node n = new Node();
         root = new tree(null,null,null,n);
@@ -46,21 +47,35 @@ public class llk {
 
     public void getNextLex() {
         tec_iterat = sc.scanner(content, sc.tek_i);
+        if(tec_iterat == ID){
+            nameID = sc.nameId;
+        }else if(tec_iterat == TYPE_IN || tec_iterat == TYPE_DOUBL){
+            currentConst = sc.number;
+        }else if(tec_iterat == MAIN){
+            nameID ="Main";
+        }
     }
 
     public int start(){
         if(tec_iterat == CLASS) {
             getNextLex();
             addInStack(T_CLASS);
-            return ll1();
+            int result = ll1();
+            if(result == ERROR){
+                return ERROR;
+            }
+            else {
+                root.Pr();
+                return OK;
+            }
         } else {
             printError("Ожидался класс main в строке ");
             return ERROR;
         }
     }
     public int  getNextFromStack(){
-        int next = stack.firstElement();
-        stack.remove(0);
+        int next = stack.getFirst();
+        stack.removeFirst();
         return next;
     }
     public void addInStack(int element){
@@ -72,6 +87,7 @@ public class llk {
             int choice = getNextFromStack();
             switch (choice) {
                 case T_CLASS:
+                    data_type = DATA_TYPE.TYPE_CLASS;
                     if (tec_iterat == ID || tec_iterat == MAIN) {
                         addInStack(DEL_END_LEVEL);
                         addInStack(CURLY_BRACE_CLOSE);
@@ -89,11 +105,21 @@ public class llk {
 
                 case T_OPISANIE:
                     if (tec_iterat == DOUBLE || tec_iterat == INT || tec_iterat == ID) {
-                        //сохраняем тип переменной
-                        currentType = tec_iterat;
-                        getNextLex();
+                        if(tec_iterat == ID){
+                            data_type = DATA_TYPE.TYPE_OBJECT_CLASS;
+                            nameClass = nameID;
+                            currentType = tec_iterat;
+                            getNextLex();
+                            if(tec_iterat == ASSIGN){
+                                break;
+                            }
+                        }else {
+                            data_type = DATA_TYPE.TYPE_PEREMEN;
+                            currentType = tec_iterat;
+                            getNextLex();
+                        }
+
                         if (tec_iterat == ID) {
-                            //сохранить айди
                             getNextLex();
                             if (tec_iterat == ROUND_BRACE_OPEN && currentType !=ID) {
                                 addInStack(T_OPISANIE);
@@ -102,15 +128,17 @@ public class llk {
                             } else if (tec_iterat == COMMA || tec_iterat == ASSIGN || tec_iterat == VIRGULE) {
                                 addInStack(T_OPISANIE);
                                 addInStack(T_DATA);
+                                addInStack(DEL_SET_VAR);
                                 addInStack(DEL_SAVE_TYPE);
                                 if(currentType == ID){
                                     addInStack(DEL_CHECK_TYPE_CLASS);
                                 }
                             } else {
-                                printError("Недопустимый символ в строке ");
+                                printError("Недопустимый символ" + tec_iterat + " в строке ");
                                 return ERROR;
                             }
                         } else {
+
                             printError("Ожидался идентификатор в строке ");
                             return ERROR;
                         }
@@ -122,6 +150,7 @@ public class llk {
                     break;
 
                 case T_METHOD:
+                    data_type = DATA_TYPE.TYPE_METHOD;
                     addInStack(DEL_END_LEVEL);
                     addInStack(CURLY_BRACE_CLOSE);
                     addInStack(T_OPERATOR_AND_OPERAND);
@@ -144,9 +173,8 @@ public class llk {
                         addInStack(T_ASSIGN);
                         addInStack(tec_iterat);
                         addInStack(DEL_PUSH);
-                        addInStack(DEL_SET_VAR);
-                        addInStack(DEL_FIND);
                     }
+
                     break;
                 case T_ASSIGN:
                     if(tec_iterat == NEW){
@@ -161,11 +189,11 @@ public class llk {
                     break;
                 case T_SPISOK:
                     if(tec_iterat == ID){
+                        getNextLex();
                         addInStack(T_DATA);
                         addInStack(DEL_PUSH);
                         addInStack(DEL_SET_VAR);
                         addInStack(DEL_FIND);
-                        addInStack(tec_iterat);
                     }
                     break;
 
@@ -194,6 +222,7 @@ public class llk {
                     addInStack(DEL_CHECK_TYPE_CLASS);
                     addInStack(ID);
                     addInStack(NEW);
+                    typeStack.add(ID);
 
                 case T_OPERATOR_AND_OPERAND:
                     if(tec_iterat == WHILE) {
@@ -204,9 +233,12 @@ public class llk {
                         addInStack(T_OPERATOR_AND_OPERAND);
                         addInStack(T_RETURN);
                     }
-                    else if(tec_iterat == ID){
+                    else if(tec_iterat == ID || tec_iterat == ASSIGN){
                         addInStack(T_OPERATOR_AND_OPERAND);
                         addInStack(T_ASSIGMENT);
+                    }else if(tec_iterat == INT ||tec_iterat == DOUBLE){
+                        addInStack(T_OPERATOR_AND_OPERAND);
+                        addInStack(T_OPISANIE);
                     }
                     break;
 
@@ -293,6 +325,7 @@ public class llk {
                         addInStack(ROUND_BRACE_CLOSE);
                         addInStack(ROUND_BRACE_OPEN);
                     }else {
+                        data_type = DATA_TYPE.TYPE_PEREMEN;
                         addInStack(DEL_FIND_IN_TREE_VAR);
                     }
                     break;
@@ -301,7 +334,7 @@ public class llk {
                         addInStack(T_NAME2);
                         addInStack(ID);
                     }else {
-                        printError("Ошибка в строке ");
+                        printError("Ошибка в строке " + tec_iterat);
                         return ERROR;
                     }
                     break;
@@ -310,6 +343,8 @@ public class llk {
                     if(tec_iterat == DOT){
                         addInStack(T_NAME);
                         addInStack(DOT);
+                        addInStack(DEL_FIND_IN_TREE_VAR);
+                        data_type = DATA_TYPE.TYPE_OBJECT_CLASS;
                     }
                     else {
                         addInStack(DEL_PUSH);
@@ -319,27 +354,217 @@ public class llk {
 
                 case T_ASSIGMENT:
                         if(tec_iterat == ID){
-                            addInStack(DEL_ITS_VAR);
-                            addInStack(T_NAME);
-                        }else{
+                            getNextLex();
+                        }else if(tec_iterat!=ASSIGN){
                             printError("Должно быть присваивание. Ошибка в строке ");
                             return ERROR;
                         }
                         if (tec_iterat == ASSIGN) {
                             addInStack(T_ASSIGN);
                             addInStack(tec_iterat);
-                        } else {
-                            printError("Недопустимый символ в строке ");
+
+                        } else if(tec_iterat == DOT) {
+                            addInStack(T_NAME2);
+                        }else{
+                            printError("Недопустимый символ " + tec_iterat + " в строке ");
                             return ERROR;
                         }
+                    break;
 
+                case DEL_CHECK_RETURN:
+                    //проверяем ретерн
+                    if(typeStack.size() < 2){
+                        printError("При сравнивании типов во время return произошла ошибка");
+                        return ERROR;
+                    }
+                    int oneType = typeStack.getLast();
+                    typeStack.removeLast();
+                    int twoType = typeStack.getLast();
+                    typeStack.removeLast();
+                    if(oneType!= twoType){
+                        printError("Возвращаемое значение не соответсвует типу функции");
+                    }
+                    break;
+                case DEL_CHECK_TYPE_CLASS:
+                    //при объявлении переменной класса проверяем есть ли такой класс
+                    if(search == null){
+                        search = root;
+                    }
+                    if(nameClass == null){
+                        nameClass = nameID;
+                    }
+                    search = search.FindClass(root,nameClass);
+                    if(search == null){
+                        printError("Класса " + nameClass + " не существует");
+                        return ERROR;
+                    }
+                    break;
+                case DEL_END_LEVEL:
+                    //выход с уровня
+                    printError("Вышли из }");
+                    root = MyTree.getLast();
+                    root.Left = new tree();
+                    MyTree.removeLast();
+                    break;
+                case DEL_NEW_LEVEL:
+                    printError("Добавили ответвление в дереве({)");
+                    //переход на новый уровень
+                    MyTree.add(root);
+                    Node n = new Node();
+                    n.NameLex = "";
+                    n.TypeOfLex = DATA_TYPE.TYPE_UNIKNOW;
+                    root.setRight(n);
+                    root = root.Right;
+                    root.Up = MyTree.getLast();
+                    break;
+                case DEL_FIND:
+                    printError("Проверка "+nameID + " на уникальность в строке ");
+                    if(search == null){
+                        search = root;
+                    }
+                    search = search.FindInClass(search,nameID,data_type);
+                    if(search!=null){
+                        printError(nameID + " уже объявлено. Ошибка в строке ");
+                        return ERROR;
+                    }
+                    break;
+                case DEL_FIND_IN_TREE_FUNC:
+                    printError("Поиск вызываемой функции в строке ");
+                    search = search.FindInClass(search,nameID,DATA_TYPE.TYPE_METHOD);
+                    if(search==null){
+                        printError("Функция не существует. Ошибка в стркое ");
+                        return ERROR;
+                    }
+                    typeStack.add(search.n.LexType);
+                    break;
+                case DEL_FIND_IN_TREE_VAR:
+                    printError("Поиск переменной " + nameID +" из строки ");
+                    search = root;
+                    search = search.FindUpOneLevel(search,nameID,data_type);
+                    if(search==null){
+                        printError("Переменная не существует. Ошибка в строке ");
+                        return ERROR;
+                    }
+                    if(data_type == DATA_TYPE.TYPE_OBJECT_CLASS){
+                        printError(" Переменная является экземпляром класса, переходим на ее ветку, для дальнейшего поиска. Строка ");
+                        search = search.FindClass(search,nameClass);
+                        search = search.Right;
+                        while (search.Left!=null){
+                            search = search.Left;
+                        }
+                    }
+                    break;
+                case DEL_ITS_VAR:
+                    printError("Проверка. Является ли слева от равно переменная. Строка ");
+                    Node var = varStack.getLast();
+                    if(var.TypeOfLex != DATA_TYPE.TYPE_PEREMEN){
+                        printError("Невозможно присвоить значение не переменной");
+                        return ERROR;
+                    }
+                    break;
+
+                case DEL_MATCH:
+                    if(typeStack.size() < 2){
+                        printError("При сравнивании типов произошла ошибка");
+                        return ERROR;
+                    }
+                    oneType = typeStack.getLast();
+                    typeStack.removeLast();
+                    twoType = typeStack.getLast();
+                    typeStack.removeLast();
+                    if(oneType == DOUBLE){
+                        if(twoType == INT || twoType == DOUBLE){
+                            typeStack.add(DOUBLE);
+                        }else {
+                            printError("Ошибка в присваивании типов, что то не так с типами");
+                            return ERROR;
+                        }
+                    }else if(twoType == DOUBLE){
+                        if(oneType == INT || oneType == DOUBLE){
+                            typeStack.add(DOUBLE);
+                        }else {
+                            printError("Ошибка в присваивании типов, что то не так с типами");
+                            return ERROR;
+                        }
+                    }else {
+                        typeStack.add(INT);
+                    }
+                    break;
+                case DEL_MATCH_LEFT:
+                    if(typeStack.size() < 2){
+                        printError("При сравнивании типов произошла ошибка");
+                        return ERROR;
+                    }
+                    oneType = typeStack.getLast();
+                    typeStack.removeLast();
+                    twoType = typeStack.getLast();
+                    typeStack.removeLast();
+                    if(twoType == oneType && oneType == ID){
+                        typeStack.add(twoType);
+                    }
+                    else if(oneType == ID || twoType == ID){
+                        printError("Несоответсвие типов в строке ");
+                        return ERROR;
+                    }else {
+                        if(oneType == DOUBLE || twoType == DOUBLE){
+                            typeStack.add(DOUBLE);
+                        }else {
+                            typeStack.add(INT);
+                        }
+                    }
+                    break;
+                case DEL_PUSH_DOUBLE_CONST:
+                    printError("Добавляем константу " + currentConst + "в стек. Строка " );
+                    Node nodeConstDouble = new Node();
+                    ValueType nal = new ValueType();
+                    nal.setValue(Double.parseDouble(currentConst));
+                    nodeConstDouble.setValueT(nal);
+                    varStack.add(nodeConstDouble);
+                    typeStack.add(DOUBLE);
+                    break;
+                case DEL_PUSH_INT_CONST:
+                    printError("Добавляем константу " + currentConst + "в стек. Строка " );
+                    Node nodeConstInt = new Node();
+                    nal = new ValueType();
+                    nal.setValue(Integer.parseInt(currentConst));
+                    nodeConstInt.setValueT(nal);
+                    varStack.add(nodeConstInt);
+                    typeStack.add(INT);
+                    break;
+                case DEL_PUSH:
+
+                    if(search != null){
+                        varStack.add(search.n);
+                        search = null;
+                    }else {
+                        varStack.add(root.n);
+                    }
+                    break;
+                case DEL_SAVE_TYPE:
+                    typeStack.add(currentType);
+                    printError("Сохранен тип в строке ");
+                    break;
+                case DEL_SET_CLASS:
+                    Node newClass = new Node(CLASS, DATA_TYPE.TYPE_CLASS, nameID);
+                    root = root.addNode(root, newClass);
+                    printError("Добавлен класс в строке ");
+                    break;
+                case DEL_SET_FUNC:
+                    Node newFunc = new Node(currentType,DATA_TYPE.TYPE_METHOD,nameID);
+                    root = root.addNode(root, newFunc);
+                    printError("Добавлена функция в строке ");
+                    break;
+                case DEL_SET_VAR:
+                    Node newVar = new Node(currentType,data_type,nameID);
+                    root = root.addNode(root, newVar);
+                    printError("Добавлена переменная " + nameID +" в строке ");
                     break;
                 default:
                     if(tec_iterat == choice){
                         getNextLex();
                     }
                     else {
-                        printError("Ошибка в строке ");
+                        printError("Ошибка в строке " + tec_iterat);
                         return ERROR;
                     }
             }
